# gemini-sdlc

./: GEMINI.md  README.md  SDLC-ORCHESTRATOR.md  gemini-extension.json  manage_tokens.py  package-lock.json  package.json  pyproject.toml  styleguide.md  tsconfig.json
.gemini/commands/: bootstrap.toml  scaffold.toml  start-feature.toml  sync-tickets.toml  team-launch.toml
.gemini/missions/: full-sdlc-cycle.toml
src/: __init__.py  index.ts  server.py
