[project]
name = "gemini-sdlc"
version = "2.0.0"
description = "SDLC Command Center - MCP Server for Gemini CLI with 30+ development lifecycle tools"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Baboon Labs", email = "nikolai@baboonlabs.com"}
]
keywords = ["mcp", "gemini", "sdlc", "development", "automation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
gemini-sdlc = "src.server:mcp.run"

[project.urls]
Homepage = "https://github.com/BaboonLabs/gemini-sdlc"
Repository = "https://github.com/BaboonLabs/gemini-sdlc"
Issues = "https://github.com/BaboonLabs/gemini-sdlc/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
